; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm64/rockchip/clk/extr_rk_cru.c_rk_cru_modify_4.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm64/rockchip/clk/extr_rk_cru.c_rk_cru_modify_4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rk_cru_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32)* @rk_cru_modify_4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rk_cru_modify_4(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.rk_cru_softc*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call %struct.rk_cru_softc* @device_get_softc(i32 %11)
  store %struct.rk_cru_softc* %12, %struct.rk_cru_softc** %9, align 8
  %13 = load %struct.rk_cru_softc*, %struct.rk_cru_softc** %9, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @CCU_READ4(%struct.rk_cru_softc* %13, i32 %14)
  store i32 %15, i32* %10, align 4
  %16 = load i32, i32* %7, align 4
  %17 = xor i32 %16, -1
  %18 = load i32, i32* %10, align 4
  %19 = and i32 %18, %17
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* %10, align 4
  %22 = or i32 %21, %20
  store i32 %22, i32* %10, align 4
  %23 = load %struct.rk_cru_softc*, %struct.rk_cru_softc** %9, align 8
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* %10, align 4
  %26 = call i32 @CCU_WRITE4(%struct.rk_cru_softc* %23, i32 %24, i32 %25)
  ret i32 0
}

declare dso_local %struct.rk_cru_softc* @device_get_softc(i32) #1

declare dso_local i32 @CCU_READ4(%struct.rk_cru_softc*, i32) #1

declare dso_local i32 @CCU_WRITE4(%struct.rk_cru_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
